--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- Politics and government -- 1789-1900'
 - !lcc 'DC'
+- GITenberg
 title: 'Actes et Paroles, Volume 4: Depuis l''Exil 1876-1885'
 url: http://www.gutenberg.org/ebooks/8490
